[package]
name = "sm9"
version = "0.4.0"
edition = "2024"
authors = ["John Yu <cb8866@sina.com>"]
description = "SM9 (OSCCA GM/T 0044-2016), identity-based cryptography"
keywords = ["SM9", "pairing", "crypto", "cryptography", "shangmi"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sm9/"
repository = "https://github.com/John-Yu/SM9"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.1" }
sec1 = { version = "0.7.3", features = ["alloc", "pem", "std"] }
sm3 = "0.4.2"
hmac = "0.12.1"
signature = "2.2.0"
sm9_core = "0.5.0"
hex-literal = "1.0.0"
#kem = "0.2.0"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
generic-array = "1.2.0"
rand_core = "0.9.3"                                            # Add the rand_core crate

[dev-dependencies]
hex-literal = "1.0.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
